<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_repeat"
    android:orientation="vertical" >

    <include layout="@layout/header_bar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_repeat" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/header_arrow" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal" >

            <FrameLayout
                android:id="@+id/frameLayout1"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp" >

                <TextView
                    android:id="@+id/headerTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:text="SIGN IN"
                    android:textColor="@color/black"
                    android:textSize="18dp" />
            </FrameLayout>
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="2dp"
            android:text="@string/username"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/usernameEditText"
            style="@style/input_field"
            android:layout_width="match_parent"
            android:ems="10"
            android:inputType="textNoSuggestions" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="2dp"
            android:text="@string/password"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/passwordEditText"
            style="@style/input_field"
            android:layout_width="match_parent"
            android:ems="10"
            android:inputType="textPassword" />

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp" >

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/btn_black_selector"
                android:text="@string/signIn"
                android:textColor="@color/white" />

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_centerHorizontal="true">

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/loadingTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_toRightOf="@+id/progressBar"
                    android:text="Large Text"
                    android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="@color/dark_grey" android:textSize="16dp"/>

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:orientation="vertical" android:layout_marginBottom="35dp">

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="35dp"
                    android:text="@string/dontHaveAnAccount"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@drawable/btn_black_selector"
                    android:text="@string/registerHere"
                    android:textColor="@color/white" android:layout_marginLeft="2dp" android:layout_marginRight="2dp"/>
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>